tests/syntax_error/const_without_value.jou
const FOO  # Error: you must specify a value for FOO
